--- a/untitled/css/main.css
+++ b/untitled/css/main.css
@@ -16,6 +16,8 @@ body{
     left: 0;
 }
 .main-library{
+    position: relative;
+    z-index: -9999;
     height: 300px;
     margin-bottom: 40px;
 }
